--- a/erp-quimicos/src/main/webapp/vm/invordenentrada/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordenentrada/startup.vm
@@ -309,7 +309,7 @@
 													<table border="0" width="100%" >
 														<tr>
 															<td width="10" ></td>
-															<td width="780" colspan="5" rowspan="5">
+															<td width="780" colspan="5" rowspan="6">
 																<div id="div_warning_grid"  style="width:770px; height:90px; display:none;">
 																	<table border="0">
 																		<tr>
@@ -335,7 +335,7 @@
 																	</table>
 																</div>
 															</td>
-															<td width="100" align="right" style="font-weight: bold;">Flete&nbsp;&nbsp;</td>
+															<td width="100" align="right" style="font-weight: bold;"><span id="etiqueta_flete">Flete&nbsp;&nbsp;</span></td>
 															<td width="130">
 																<INPUT TYPE="text" name="flete" value="0" style="width:130px; text-align:right">
 																<input type="hidden" name="iva_flete">
@@ -348,12 +348,17 @@
 														</tr>
 														<tr>
 															<td width="10"></td>
+															<td width="100" align="right" style="font-weight: bold;"><span id="etiqueta_ieps">IEPS&nbsp;&nbsp;</span></td>
+															<td width="130"><input type="text" name="ieps" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+														</tr>
+														<tr>
+															<td width="10"></td>
 															<td width="100" align="right" style="font-weight: bold;">IVA&nbsp;&nbsp;</td>
 															<td width="130"><INPUT TYPE="text" name="totimpuesto" value="0" style="width:130px; text-align:right" readOnly="true"></td>
 														</tr>
 														<tr>
 															<td width="10"></td>
-															<td width="100" align="right" style="font-weight: bold;">Retenci&oacute;n&nbsp;&nbsp;</td>
+															<td width="100" align="right" style="font-weight: bold;"><span id="etiqueta_ret">Retenci&oacute;n&nbsp;&nbsp;</span></td>
 															<td width="130"><INPUT TYPE="text" name="retencion" value="0" style="width:130px; text-align:right" readOnly="true"></td>
 														</tr>
 														<tr>
