--- a/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
@@ -388,9 +388,9 @@
                                             <td width="70">C&oacute;digo&nbsp;</td>
                                             <td width="120"><input type="text" name="campo_sku" style="width:120px;"></td>
                                             <td width="25"></td>
-                                            <td width="90"><!--Tipo&nbsp;de&nbsp;Producto--></td>
+                                            <td width="90">Tipo&nbsp;de&nbsp;Producto</td>
                                             <td width="200">
-                                                <!--<SELECT NAME="tipo_producto" style="width:180px;"></SELECT>-->
+                                                <SELECT NAME="tipo_producto" style="width:180px;"></SELECT>
                                             </td>
                                             <td width="25"></td>
                                             <td width="90"></td>
