--- a/erp-quimicos/src/main/webapp/vm/tesban/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/tesban/startup.vm
@@ -52,9 +52,9 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="text" name="busqueda_banco" style="width:80px;"></td>
+				<td><input type="text" name="busqueda_banco" style="width:80px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="text" name="busqueda_descripcion" style="width:230px;"></td>
+				<td><input type="text" name="busqueda_descripcion" style="width:230px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td>
 					<!--<SELECT NAME="busqueda_select_grupo" style="width:150px;">
@@ -62,9 +62,9 @@
 					</SELECT>-->
 				</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="button" value="Buscar"></td>
+				<td><input type="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td ><INPUT TYPE="button" value="Limpiar"></td>
+				<td ><input type="button" value="Limpiar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			</tr>
 		</table>
@@ -124,9 +124,10 @@
                                         <table border="0">
 											<tr>
 												<td width="5"></td>
-												<td width="115">Banco</td>
-												<td width="150" colspan="3"><INPUT TYPE="text" name="titulo" value="" style="width:150px;"></td>
-												<td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_titulo"></div></td>
+												<td width="90">Banco</td>
+												<td width="200" colspan="2"><input type="text" name="titulo" value="" style="width:200px;"></td>
+												<td width="200"></td>
+												<td width="20"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_titulo"></div></td>
 												<td width="25"></td>
 												<td></td>
 											</tr>
@@ -135,12 +136,24 @@
 											</tr>
 											<tr>
 												<td width="5"></td>
-												<td width="115">Descripci&oacute;n</td>
-												<td colspan="4"><INPUT TYPE="text" name="descripcion" value="" style="width:370px;"></td>
-												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_descripcion"></div></td>
+												<td width="90">Descripci&oacute;n</td>
+												<td width="400" colspan="3"><input type="text" name="descripcion" value="" style="width:400px;"></td>
+												<td width="25"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_descripcion"></div></td>
 												<td></td>
 											</tr>
-					</table>
+											<tr>
+												<td width="8">&nbsp;</td>
+											</tr>
+											<tr>
+												<td width="5"></td>
+												<td width="90">Clave&nbsp;SAT</td>
+												<td width="50"><input type="text" name="clave" value="" style="width:50px;"></td>
+												<td width="150"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_clave"></div></td>
+												<td width="200"></td>
+												<td width="25"></td>
+												<td></td>
+											</tr>
+										</table>
                                     </div>
 									
                                 </div>
