git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1237 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/empleados/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/empleados/startup.vm
@@ -399,8 +399,8 @@
 												<td width="25"></td>
 												<td width="75"></td>
 												<td width="25"></td>
-												<td width="85"></td>
-												<td width="150"></td>
+												<td width="85">Generar&nbsp;Nomina</td>
+												<td width="150"><input type="checkbox" name="check_genera_nomina" value="true"></td>
 												<td width="25"></td>
 											</tr>
 											
