git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1249 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -631,9 +631,9 @@
 											</li>
 										</ul>
 									</li>
-
-
-
+									
+									
+									
 									
 									<li class="accessible" >
 										<a href="http://jdsharp.us" class="accessible">Envasado &raquo;</a>
@@ -677,6 +677,9 @@
 													<li><a href="../graldeptos/startup.agnux">Departamentos</a></li>
 													<li><a href="../graldeptosturnos/startup.agnux">Turnos</a></li>
 													<li><a href="../gralieps/startup.agnux">IEPS</a></li>
+													
+													<li><a href="../gralpercepciones/startup.agnux">Percepciones</a></li>
+													<li><a href="../graldeducciones/startup.agnux">Deduciones</a></li>
 												</ul>
 											</li>
 
