--- a/erp-quimicos/src/main/webapp/css/modalbox/invcapturacostos/formaInvCapturaCostos.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/invcapturacostos/formaInvCapturaCostos.css
@@ -96,8 +96,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .invcapturacostos_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-    width:830px;
-    height:352px;
+    width:770px;
+    height:402px;
 /*  background-color:#D1D2D4;
     border:2px solid #313E74;*/
     border-radius:10px;
@@ -109,7 +109,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .invcapturacostos_div_two{
     /*font-family:tahoma;*/
-    width:830px;
+    width:770px;
     height:28px;
     /*background-color:#2F3D73;*/
     background-color:#454442;
@@ -125,7 +125,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .invcapturacostos_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:820px;
+    /*width:820px;*/
     height:48px;
     /*background-color:#D1D2D4;*/
     background-color:#e9e9e9;
